--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,17 @@
 body {
     background-image: url("../images/crystalbg.jpg");
-    background-size: cover;
+    background-size: auto;
+}
+
+.name {
+    border: 3px double pink;
+    color: magenta;
+    justify-content: center;
+    font-size: 36px;
+    font-family: 'Calibri';
+}
+
+.desc {
+    border: 3px solid brown;
+    color: gold;
 }
